// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`renders the margin explanation and retry path after invalid submission > margin:error 1`] = `
"root/link[0] href="/logo-devrika.png"
root/div[0] data-public-oauth-surface="margin:error" data-provider-scope="adwords" data-permission-capability="broad" data-application-behavior="read-operations-only" data-mutation-behavior="none"
root/div[0]/div[0]
root/div[0]/div[0]/a[0]
root/div[0]/div[0]/a[0]/img[0] alt="Devrika"
root/div[0]/div[0]/a[0]/span[0]
root/div[0]/div[0]/a[0]/span[0]/text "Devrika"
root/div[0]/div[0]/div[0]
root/div[0]/div[0]/div[0]/p[0]
root/div[0]/div[0]/div[0]/p[0]/text "Pasul 2 din 3"
root/div[0]/div[0]/div[0]/h1[0]
root/div[0]/div[0]/div[0]/h1[0]/text "Hai să stabilim pragul de la care campaniile tale Google Ads fac sau pierd bani"
root/div[0]/div[0]/div[0]/p[1]
root/div[0]/div[0]/div[0]/p[1]/text "Confirmă valoarea medie a unei comenzi și spune-ne cât te costă marfa din acea comandă. Noi calculăm CPA-ul maxim și ROAS-ul minim la care încă nu pierzi bani."
root/div[0]/div[0]/div[0]/p[2]
root/div[0]/div[0]/div[0]/p[2]/text "marja trebuie sa fie intre 1 si 99 la suta"
root/div[0]/div[0]/div[0]/form[0]
root/div[0]/div[0]/p[0]
root/div[0]/div[0]/p[0]/text "Nu cerem facturi și nu avem acces la contabilitate. Poți ajusta valorile înainte de generarea auditului.""
`;

exports[`renders the normal margin state through the canonical contract > margin:normal 1`] = `
"root/link[0] href="/logo-devrika.png"
root/div[0] data-public-oauth-surface="margin:normal" data-provider-scope="adwords" data-permission-capability="broad" data-application-behavior="read-operations-only" data-mutation-behavior="none"
root/div[0]/div[0]
root/div[0]/div[0]/a[0]
root/div[0]/div[0]/a[0]/img[0] alt="Devrika"
root/div[0]/div[0]/a[0]/span[0]
root/div[0]/div[0]/a[0]/span[0]/text "Devrika"
root/div[0]/div[0]/div[0]
root/div[0]/div[0]/div[0]/p[0]
root/div[0]/div[0]/div[0]/p[0]/text "Pasul 2 din 3"
root/div[0]/div[0]/div[0]/h1[0]
root/div[0]/div[0]/div[0]/h1[0]/text "Hai să stabilim pragul de la care campaniile tale Google Ads fac sau pierd bani"
root/div[0]/div[0]/div[0]/p[1]
root/div[0]/div[0]/div[0]/p[1]/text "Confirmă valoarea medie a unei comenzi și spune-ne cât te costă marfa din acea comandă. Noi calculăm CPA-ul maxim și ROAS-ul minim la care încă nu pierzi bani."
root/div[0]/div[0]/div[0]/form[0]
root/div[0]/div[0]/p[0]
root/div[0]/div[0]/p[0]/text "Nu cerem facturi și nu avem acces la contabilitate. Poți ajusta valorile înainte de generarea auditului.""
`;
